# SSO-auto-login

./: README.md  requirements.txt
poetry/: pyproject.toml  sso_auto_login.py
